--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="C:\Users\getti\Pictures\mewithdegree.png" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="C:\Users\getti\Desktop\DevFolio\assets\img\gradcropped.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
